# starrover

./: space.cabal  starrover.cabal
src/: Civilization.hs  CreateGalaxy.hs  CreateTerrain.hs  DB.hs  DataCreate.hs  DataFunction.hs  DataTypes.hs  EmpireZipper.hs  Galaxy.hs  GalaxyStats.hs  Good.hs  Main.hs  Math.hs  Named.hs  Statistics.hs  Terrain.hs  Utils.hs  World.hs  ZipperGalaxy.hs  ZipperGalaxyUtils.hs
