Name:           starrover
Version:        0.0.1
Cabal-Version:  >= 1.2
License:        OtherLicense
License-File:   LICENSE
Author:         Antti Salonen<ajsalonen at gmail dot com>
Maintainer:     Antti Salonen<ajsalonen at gmail dot com>
Copyright:      Antti Salonen 2009
Stability:      Unstable
Category:       Games
Synopsis:       Space game.
Description:    Space game.
Build-type:     Simple

Executable starrover
  Build-Depends:   base, haskell98, array>=0.2.0.0,
                   directory>=1.0.0.0, containers>=0.2.0.0,
                   random>=1.0.0.0, mtl>=1.1.0.0,
                   libaddutil>=0.0.2, EdisonCore>=1.2.0,
                   EdisonAPI>=1.2.0
  Main-is:         Main.hs
  Hs-Source-Dirs:  src
  Ghc-options:     -Wall -fno-warn-missing-signatures
                   -fno-warn-name-shadowing
                   -fno-warn-unused-matches
